clear floats on tabboxes in the examples so things wrap correctly in IE 6.

--- a/www/reference/examples/css/tests.css
+++ b/www/reference/examples/css/tests.css
@@ -161,6 +161,7 @@ dd {
   border: 1px solid #ccc; 
   border: 1px solid #ccc;
   width: 600px;
+  clear: both;
 }
 
 .layoutBox {
